fix navbar not showing up in static HTML docs

--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ nav ol {
   padding-left: 1rem;
 }
 
-main {
+#main-output {
   max-width: var(--main-width);
 }
 
